tests/parser/should_fail/readFail004.stderr
readFail004.hs:17:16: error: [GHC-21231]
    lexical error at character '.'

